syntax = "proto3";

import "google/protobuf/empty.proto";

option go_package="./Replication";

package replicationservice;

message NewBid {
    int64 amount = 1;
    int64 bidderid = 2;
    int64 timestamp = 3;
}

message NewLeader {
    string address = 1;
}

message Response {
    bool ack = 1;
    int64 bidderid = 2;
}

// P2PNetwork
service ReplicationService {
    rpc ReplicateBid(NewBid) returns (Response);
    rpc ConfirmLeader(NewLeader) returns (Response);
    rpc PropagateToLeader(NewBid) returns (Response);
    rpc HeartBeat(google.protobuf.Empty) returns (Response);
}
